# vibe-verifier

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  ENVIRONMENT.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
scripts/: setup-dev-uv.sh  setup-dev.sh
src/: __init__.py  main.py
src/analyzers/: __init__.py  complexity.py  documentation_analyzer.py  git_history.py
src/reporters/: report_generator.py
src/testers/: __init__.py  test_runner.py
src/utils/: __init__.py  security.py
src/verifiers/: __init__.py  formal_verifier.py  static_analyzer.py
tests/: __init__.py  conftest.py  test_complexity_analyzer.py  test_documentation_analyzer.py  test_formal_verifier.py  test_git_history_analyzer.py  test_integration.py  test_report_generator.py  test_security_sanitizer.py  test_static_analyzer.py  test_test_runner.py
